<resources>
    <!--bloodpreslayout-->
    <string name="app_name">MedicationProject</string>
    <string name="bloodpressure">혈압 측정 기록</string>
    <string name="bPMeasure">측정 시간</string>
    <string name="bPressure">측정 혈압</string>
    <string name="save">저장</string>
    <string name="mmHg">mmHg</string>
    <string name="morning">아침</string>
    <string name="evening">저녁</string>
    <!--bloodsugarlayout-->
    <string name="bloodSugar">혈당 측정 기록</string>
    <string name="bSMeasure">측정 혈당</string>
    <string name="bSMor1">아침 전</string>
    <string name="bSMor2">아침 후</string>
    <string name="bSLun1">점심 전</string>
    <string name="bSLun2">점심 후</string>
    <string name="bSEve1">저녁 전</string>
    <string name="bSEve2">저녁 후</string>
    <string name="mgdL">mg/dl</string>
    <string name="todayDate">오늘 날짜: </string>

    <!--familyaddlayout-->
    <string name="familyadd">가족/의사 등록</string>
    <string name="familyText">복약 기록 공유를 위해 가족이나 의사의 정보를 입력해주세요.</string>
    <string name="name">이름</string>
    <string name="phone">연락처</string>
    <string name="email">이메일(파일 공유)</string>
    <string name="add">등록</string>
    <string name="del">삭제</string>
    <string name="add_msg">You must enter three items.</string>
    <string name="del_msg">Don\'t exist item.</string>

    <!--family List-->
    <string name="familyList">가족/의사 등록 현황</string>


    <!--bloodpreslayout-->
    <string name="auto_value_fill">자동 입력</string>
    <string name="mor_or_eve">아침/저녁</string>
    <string name="PressureResultTEXT">측정하신 값</string>

    <!--bloodsugar layout-->
    <string name="meal_befor_after">식전/식후</string>
    <string name="bSugar">측정 혈당</string>
    <string name="bf_before">아침 전</string>
    <string name="bf_after">아침 후</string>
    <string name="lunch_before">점심 전</string>
    <string name="lunch_after">점심 후</string>
    <string name="dn_before">저녁 전</string>
    <string name="dn_after">저녁 후</string>

    <!--login_layout-->
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>

    <string name="signin">로그인</string>
    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>

    <string name="signup">회원가입</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>

    <string name="ask">드실 약을 촬영해주세요.</string>
    <string name="alam">10분 뒤 다시 알림</string>
    <string name="Login">Login</string>
    <string name="OK">로그인</string>
    <string name="Cancle">취소</string>


    <string name="preBTN2">이전</string>
    <string name="nextBTN2">다음</string>
</resources>