<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:background="#7ebe72"
        android:onClick="gomain"
        app:srcCompat="@drawable/logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/LOGO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/app_main_font"
            android:gravity="center"
            android:text="@string/familyadd"
            android:textSize="25sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/familyText"
        android:fontFamily="@font/app_main_font" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/app_main_font"
            android:labelFor="@+id/nameETXT"
            android:text="@string/name" /> <!--이 텍스트뷰는 nameETXT의 라벨 버전 17이상부터는 text나 hint 속성을 작성하라고하기때문에-->
        <!--0dp를 넣어야 같은 높이에서 균등하게할 수 있음-->
        <EditText
            android:id="@+id/nameETXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="@font/app_main_font"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/app_main_font"
            android:labelFor="@+id/nameETXT"
            android:text="@string/phone" /> <!--이 텍스트뷰는 nameETXT의 라벨 버전 17이상부터는 text나 hint 속성을 작성하라고하기때문에-->
        <!--0dp를 넣어야 같은 높이에서 균등하게할 수 있음-->
        <EditText
            android:id="@+id/phoneETXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="@font/app_main_font"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="13" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/app_main_font"
            android:labelFor="@+id/emailETXT"
            android:text="@string/email" /> <!--이 텍스트뷰는 nameETXT의 라벨 버전 17이상부터는 text나 hint 속성을 작성하라고하기때문에-->
        <!--0dp를 넣어야 같은 높이에서 균등하게할 수 있음-->
        <EditText
            android:id="@+id/emailETXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:fontFamily="@font/app_main_font"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress|textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F18B67"
            android:fontFamily="@font/app_main_font"
            android:onClick="click"
            android:text="@string/add" />

        <Button
            android:id="@+id/delBTN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F18B67"
            android:fontFamily="@font/app_main_font"
            android:onClick="click"
            android:text="@string/del" />

    </LinearLayout>

    <ListView
        android:id="@+id/addressLST"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>