<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bPTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/bloodSugar"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todayDate" />

        <TextView
            android:id="@+id/todayDateTXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:columnCount="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bSMeasureTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/bSMeasure" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/familyPhoneTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center|end"
                android:labelFor="@+id/familyPhoneETXT"
                android:text="@string/bSMor1" />


            <EditText
                android:id="@+id/familyPhoneETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|fill"
                android:layout_marginStart="15dp"
                android:layout_weight="1.2"
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/mgdlTXT1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/mgdL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bsMor2TXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center|end"
                android:labelFor="@+id/bsMor2ETXT"
                android:text="@string/bSMor2" />


            <EditText
                android:id="@+id/bsMor2ETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|fill"
                android:layout_marginStart="15dp"
                android:layout_weight="1.2"
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/mgdlTXT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/mgdL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bsLun1TXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center|end"
                android:labelFor="@+id/bsLun1ETXT"
                android:text="@string/bSLun1" />


            <EditText
                android:id="@+id/bsLun1ETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|fill"
                android:layout_marginStart="15dp"
                android:layout_weight="1.2"
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/mgdlTXT3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/mgdL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="4"
            android:layout_column="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bsLun2TXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center|end"
                android:labelFor="@+id/bsLun2ETXT"
                android:text="@string/bSLun2" />


            <EditText
                android:id="@+id/bsLun2ETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|fill"
                android:layout_marginStart="15dp"
                android:layout_weight="1.2"
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/mgdlTXT4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/mgdL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="5"
            android:layout_column="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bsEveTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|end"
                android:labelFor="@+id/bsEve1ETXT"
                android:text="@string/bSEve1"
                android:layout_marginEnd="20dp" />

            <EditText
                android:id="@+id/bsEve1ETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|fill"
                android:layout_marginStart="15dp"
                android:layout_weight="1.2"
                android:autofillHints=""
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/mgdlTXT5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/mgdL" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="6"
            android:layout_column="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eveTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="center|end"
                android:labelFor="@+id/bsEve2ETXT"
                android:text="@string/bSEve2" />

            <EditText
                android:id="@+id/bsEve2ETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill|end"
                android:layout_marginStart="15dp"
                android:layout_weight="1.2"
                android:autofillHints=""
                android:gravity="end"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/mgdlTXT6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/mgdL" />
        </LinearLayout>

    </GridLayout>

    <Button
        android:id="@+id/BSSaveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/save" />


</LinearLayout>