<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bPTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/bloodpressure"
        android:textSize="23sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todayDate" />

        <TextView
            android:id="@+id/todayDateTXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="20dp"
        android:columnCount="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mor_or_eve" />

            <TextView
                android:id="@+id/bMeasureTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="23dp"
                android:text="@string/bPMeasure" />

            <TextView
                android:id="@+id/bPressureTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/bPressure" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="2"
            android:layout_column="0"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/mor_eve_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:gravity="center|end" />

            <TextView
                android:id="@+id/bPrTimeETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/auto_value_fill"
                android:importantForAutofill="no"
                android:inputType="time"
                android:labelFor="@+id/morBPresETXT" />


            <EditText
                android:id="@+id/bPrETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/edit_border"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="14sp" />

            <TextView
                android:layout_column="3"
                android:id="@+id/mmHgTXT1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/mmHg" />
        </LinearLayout>
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eveTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/evening" />

            <TextView
                android:id="@+id/eveTimeETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/auto_value_fill"
                android:importantForAutofill="no"
                android:labelFor="@+id/eveBPresETXT" />

            <EditText
                android:id="@+id/eveBPresETXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill|end"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:gravity="end"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/mmHgTXT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/mmHg" />
        </LinearLayout>
        -->

    </GridLayout>

    <Button
        android:id="@+id/BSSaveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="click"
        android:text="@string/save" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CalendarView
                android:id="@+id/BPresscalendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:columnCount="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bMeasureTXT_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="23dp"
                        android:text="@string/bPMeasure" />

                    <TextView
                        android:id="@+id/bPressureTXT_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/bPressure" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/morTXT_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:labelFor="@+id/morTimeTXT_show"
                        android:text="@string/morning" />

                    <TextView
                        android:id="@+id/morTimeTXT_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="time"
                        android:labelFor="@+id/morBPresTXT_show" />


                    <TextView
                        android:id="@+id/morBPresTXT_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|fill"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="3" />

                    <TextView
                        android:id="@+id/mmHgTXT1_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/mmHg" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eveTXT_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:labelFor="@+id/eveTimeTXT_show"
                        android:text="@string/evening" />

                    <TextView
                        android:id="@+id/eveTimeTXT_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:importantForAutofill="no"
                        android:inputType="time"
                        android:labelFor="@+id/eveBPresTXT_show" />

                    <TextView
                        android:id="@+id/eveBPresTXT_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill|end"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:gravity="end"
                        android:inputType="number"
                        android:maxLength="3" />

                    <TextView
                        android:id="@+id/mmHgTXT2_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/mmHg" />
                </LinearLayout>

            </GridLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>